5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1836_1274.log
== TEST (2019-06-25 11:11:17) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((n,n),dtype=int)
aux =1
aux2=0
for i in range(num):
	aux2+=1
	for j in range(num):
		if(i=aux2 or j=aux2)
		mat[i,j]=aux
		
print(mat)


-- ERROR:
File "XXXX", line 11
    if(i=aux2 or j=aux2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:11:26) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((n,n),dtype=int)
aux =1
aux2=0
for i in range(num):
	aux2+=1
	for j in range(num):
		if(i==aux2 or j==aux2)
		mat[i,j]=aux
		
print(mat)


-- ERROR:
File "XXXX", line 11
    if(i==aux2 or j==aux2)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:11:37) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((n,n),dtype=int)
aux =1
aux2=0
for i in range(num):
	aux2+=1
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux
		
print(mat)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:11:53) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
for i in range(num):
	aux2+=1
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux
		
print(mat)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:12:27) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
for i in range(num):
	aux2+=1
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux2
		
print(mat)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:40) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
while(i<num):
	if(i=aux2 or j=aux2):
		mat[i,j]=aux
	aux2+=1
	i+=1
	j+=1
print(mat)
-- ERROR:
File "XXXX", line 11
    if(i=aux2 or j=aux2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:57) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
while(i<num):
	if(i==ax2 or j==aux2):
		mat[i,j]=aux
	aux2+=1
	i+=1
	j+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:06) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
while(i<num):
	if(i==aux2 or j==aux2):
		mat[i,j]=aux
	aux2+=1
	i+=1
	j+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:41) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
while(i<num):
	if(i==aux2 or j==aux2):
		mat[i,j]=aux
	aux2+=1
	aux+=1
	i+=1
	j+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:21:54) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux
	aux2+=1
	aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:22:10) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux
		aux2+=1
		aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:22:20) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==aux2 or j==aux2):
			mat[i,j]=aux
aux2+=1
aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:23) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==aux or j==aux):
			mat[i,j]=aux
	aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:38) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==aux or j==aux):
			mat[i,j]=aux
			aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:29) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
		   aux+=1
print(mat)
-- ERROR:
File "XXXX", line 14
    aux+=1
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:41) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			  aux+=1
print(mat)
-- ERROR:
File "XXXX", line 14
    aux+=1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			aux+=1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:42:56) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			aux+=1
		if(i>j):
			mat[i,j]=aux2
			
			
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:43:35) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = ones((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			aux+=1
		if(i>j):
			mat[i,j]=aux2
			aux2+=1
			
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:45:59) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = zeros((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			aux+=1
		if(i>j and i=aux2):
			mat[i,j]=aux2+1
			
			
print(mat)
-- ERROR:
File "XXXX", line 15
    if(i>j and i=aux2):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:46:05) 
-- CODE:
from numpy import *
from numpy.linalg import *         

num = int(input("Digite: "))
mat = zeros((num,num),dtype=int)
aux =1
aux2=0
i=0
j=0
for i in range(num):
	for j in range(num):
		if(i==j):
			mat[i,j]=aux
			aux+=1
		if(i>j and i==aux2):
			mat[i,j]=aux2+1
			
			
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:51:06) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((num,num),dtype=int)
a =0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j inr range(n):
		new[i,j]= min(i,j)+1


print(new)
-- ERROR:
File "XXXX", line 12
    for j inr range(n):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:51:12) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((num,num),dtype=int)
a =0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 12:51:19) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((num,num),dtype=int)
a =0

mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- EXECUTION TIME:
1.19584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 5, in <module>
    mat = zeros((num,num),dtype=int)
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:51:38) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((num,num),dtype=int)


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 12:51:51) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((n,n),dtype=int)


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- EXECUTION TIME:
0.89036
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
Digite: [[1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 12:51:52) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((n,n),dtype=int)


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 12:52:04) 
-- CODE:
from numpy import *
from numpy.linalg import *         

n = int(input("Digite: "))
mat = zeros((n,n),dtype=int)


mat = ones((n,n),dtype=int)
new = zeros((n,n),dtype=int)

for i in range(n):
	for j in range(n):
		new[i,j]= min(i,j)+1


print(new)
-- EXECUTION TIME:
0.95179
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
